# yt-digest

./: .env.example  .gitignore  CLAUDE.md  README.md  config.yaml  pyproject.toml
docs/superpowers/plans/: 2026-03-11-yt-digest-plan.md  2026-03-12-fix-duplicate-processing.md
docs/superpowers/specs/: 2026-03-11-yt-digest-design.md  2026-03-12-fix-duplicate-processing-design.md
tests/: conftest.py  test_clusterer.py  test_config.py  test_db.py  test_fetcher.py  test_models.py  test_pipeline.py  test_slack.py  test_summarizer.py
yt_digest/: __init__.py  __main__.py  clusterer.py  config.py  db.py  fetcher.py  init_channels.py  models.py  slack.py
yt_digest/summarizer/: __init__.py  base.py  claude.py  notebooklm.py
